# Blabinha-API

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  database.db  hello.py  pyproject.toml
db/: foo.txt
docs/: intro.md
docs/guides/: authentication.md  chat-and-dialogs.md  getting-started.md  run-with-swaggerui.md
docs/references/: accounts.md  auth.md  chats.md  dialogs.md
migrations/: env.py
migrations/versions/: 384755743eee_change_from_turn_to_section_attrib.py  3c6d515eb1d1_initial_migration.py  6355c8b832a0_remove_history_from_chat.py  65256934b21a_remove_history_from_chat.py
src/: main.py
src/app/: database.py  dependencies.py
src/app/blabinha/: Blab.py  __init__.py
src/app/controllers/: blabinha_controller.py  chat_controller.py  dialog_controller.py
src/app/models/: __init__.py  chat.py  dialog.py  user.py
src/app/repositories/: chat_repo.py  dialog_repo.py
src/app/routes/: chats.py  dialogs.py
src/blabinha_api/: app.py  config.py  database.py  dependencies.py  models.py  routes.py  utils.py
src/blabinha_api/accounts/: dependencies.py  models.py  routes.py  schemas.py  services.py
src/blabinha_api/auth/: routes.py  schemas.py  services.py
src/blabinha_api/blabinha/: Blab.py
src/blabinha_api/chats/: dependencies.py  models.py  routes.py  schemas.py  services.py
src/blabinha_api/core/: dependencies.py  routes.py
src/blabinha_api/dialogs/: dependencies.py  models.py  routes.py  schemas.py  services.py
src/migrations/: env.py
test/: fixtures.py  test_chats.py  test_dialogs.py
(+42 files in other folders)
