[project]
name = "blabinha2-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "openai>=1.72.0",
    "sqlmodel>=0.0.24",
]

[tool.taskipy.tasks]
dev = "fastapi dev src/main.py"
run = "fastapi run src/main.py"
test = "pytest"
lint = "black --check ."
format = "black ."
