[project]
name = "blabinha_api"
version = "1.0.0"
description = "Serviço de API do chat-bot Blabinha"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "bcrypt>=4.3.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "openai>=1.72.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "ruff>=0.11.8",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
dev = "fastapi dev src/main.py"
run = "fastapi run src/main.py"
migrate = "alembic upgrade head"
test = "pytest"
lint = "ruff check"
format = "ruff format"

[tool.pyright]
venvPath = "."
venv = ".venv"
